Fix position for "jump to now" above chat input

--- a/assets/sass/components/_chat-messages.scss
+++ b/assets/sass/components/_chat-messages.scss
@@ -284,7 +284,7 @@
     border-bottom: 2rem solid var(--body-bg);
     height: 2em;
     position: fixed;
-    bottom: 3.2rem;
+    bottom: 3.6rem;
     z-index: 3;
     opacity: 0.9;
   }
